# bowling-api

./: .pre-commit-config.yaml  README.md  db.sqlite3  manage.py  pyproject.toml
bowling_api/: asgi.py  settings.py  urls.py  wsgi.py
bowling_api/api/: resources.py
bowling_api/bowling/: admin.py  apps.py  models.py  services.py  tests.py
bowling_api/bowling/migrations/: 0001_initial.py
tests/: test_bowling_api.py
